Take/Select Picture
se implemento la funcionalidad de poder tomar y seleccionar fotos desde la galeria para poder subirla a la base de datos en un futuro cuando la API este lista.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <!-- PERMISO DE INTERNET -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- PERMISO PARA CAMARA -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
