--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.Agromo">
+        android:theme="@style/Theme.Agromo"
+        android:forceDarkAllowed="false"
+        tools:targetApi="29">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Agromo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
